[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radreport-parser"
version = "0.3.0"
description = "Parse, structure, and export radiology free-text reports to FHIR"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "Mustafa Merchant", email = "mustafamerchant072@gmail.com" }]
keywords = ["radiology", "DICOM", "FHIR", "medical imaging", "healthcare", "NLP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Zero required dependencies — runs anywhere, passes any hospital IT review
dependencies = []

[project.scripts]
radreport = "radreport_parser.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/mustafamm072/radreport_parser"
Documentation = "https://github.com/mustafamm072/radreport_parser#readme"
Issues = "https://github.com/mustafamm072/radreport_parser/issues"

[tool.setuptools.packages]
find = { include = ["radreport_parser*"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
