[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radreport"
version = "0.4.0"
description = "Parse, de-identify, structure, and export radiology free-text reports to FHIR"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "Mustafa Merchant", email = "mustafamerchant072@gmail.com" }]
keywords = ["radiology", "DICOM", "FHIR", "medical imaging", "healthcare", "NLP", "de-identification", "PHI", "HIPAA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Zero required dependencies — runs anywhere, passes any hospital IT review
dependencies = []

[project.scripts]
radreport = "radreport.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/mustafamm072/radreport"
Documentation = "https://github.com/mustafamm072/radreport#readme"
Issues = "https://github.com/mustafamm072/radreport/issues"

[tool.setuptools.packages]
find = { include = ["radreport*"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
